--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/core": "^7.3.0",
+    "@mantine/hooks": "^7.3.0",
     "emailjs": "^4.0.3",
     "framer-motion": "^10.16.4",
     "react": "18.2.0",
